--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,7 @@ jobs:
     defaults:
       run:
       # Mobile folder working directory.
-        working-directory: backend
+        working-directory: ./backend
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
