--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run a one-line script
         run: |
           echo Hello, world!
-          ls
+          echo "$(cat text.txt)"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
